[package]
name = "yew-components"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input_yew = "0.1.0"
regex = "1.9.1"
reqwasm = "0.5.0"
serde = "1.0.178"
serde_json = "1.0.104"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
